fix: 'Invalid property value' Error On Firefox By Removing The Unnecessary Padding Line

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,6 @@ footer p:last-child {
 
 .nav {
   margin-bottom: 0;
-  padding: 20px auto;
 }
 
 .visible-desktop .span3 {
